# nspattern

./: CMakeLists.txt  README.md  test.cpp
include/ns/: pattern.h
